--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 set-option -g default-shell /bin/zsh
 
+unbind C-b
+set -g prefix C-s
+
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
