--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,10 @@
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
+# Start windows and panes at 1, not 0.
+set -g base-index 1
+setw -g pane-base-index 1
+
 # Install plugins.
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
