--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+# Change the default command mode trigger from <ctrl>b to <ctrl>s.
+unbind C-b
+set -g prefix C-s
+
 # Fix colors not showing up in vim.
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
