--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,5 +19,6 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'ianwalter/brooks-tmux'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf).
+# Initialize TMUX plugin manager (keep this line at the very bottom of 
+# tmux.conf).
 run -b '~/.tmux/plugins/tpm/tpm'
