Adding automatic restore setting

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,9 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'ianwalter/brooks-tmux'
 
+# Tell tmux-continuum to automatically restore the last snapshot.
+set -g @continuum-restore 'on'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of 
 # tmux.conf).
 run -b '~/.tmux/plugins/tpm/tpm'
