--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'ianwalter/brooks-tmux'
 
 # Tell tmux-continuum to automatically restore the last snapshot.
