🔧 Turning focus events on

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,9 @@ set -ga terminal-overrides ",*256col*:Tc"
 set -g base-index 1
 setw -g pane-base-index 1
 
+# https://github.com/sjl/vitality.vim
+set -g focus-events on
+
 # Install plugins.
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
